# email_lead_agent

./: .gitignore  README.md  pyproject.toml
frontend/: app.js  index.html  styles.css  workspace.html
src/email_lead_agent/: __init__.py  agent_service.py  api.py  gmail_reader.py  lead_evaluator.py
src/email_lead_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
